added .html files

--- a/Web-Technonogies/Week1/Portfolio.html
+++ b/Web-Technonogies/Week1/Portfolio.html
@@ -8,9 +8,9 @@
 <body>
     <h1>My Portfolio</h1>
     <ol>
-        <a href="http://">Home</a>
-        <a href="http://">About</a>
-        <a href="http://">Projects</a>
+        <a href="Portfolio.html">Home</a>
+        <a href=about/about.html>About</a>
+        <a href="projects/projects.html">Projects</a>
     </ol>
 </body>
 </html>
